--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.4",
     "react-scripts": "5.0.1",
+    "tailwind-scrollbar": "^3.0.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
